1998-12-08  Katsumi Yamaoka   <yamaoka@jpl.org>

	* poem-20.el (write-region-as-binary): Bind
	`jam-zcat-filename-list' with nil.
	* poem-xm.el (insert-file-contents-as-binary): Likewise.

	* poem.el: Require `tcp' if the function `open-network-stream'
	does not exist.

1998-12-04  Katsumi Yamaoka   <yamaoka@jpl.org>

	* poem-20.el, poem-ltn1.el, poem-nemacs.el, poem-om.el
	(open-network-stream-as-binary): New function.

	* poem-e20_2.el (insert-file-contents-as-specified-coding-system):
	New function.

	* poem-20.el, poem-ltn1.el, poem-nemacs.el, poem-om.el
	(write-region-as-specified-coding-system): New function.
	(insert-file-contents-as-specified-coding-system): New function.

1998-12-01  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poem-xm.el: If coding-system `iso-2022-jp-dos' unifies JIS X
	0201-Latin to ASCII and JIS X 0208-1978 to JIS X 0208-1983 by
	code-point, copy coding-system `iso-2022-7bit-dos' to
	`iso-2022-jp-dos' to avoid this problem.

1998-11-17  Kazuhiro Ohta  <ohta@ele.cst.nihon-u.ac.jp>

	* README.en, README.ja (add-latest-path): Fix typo.


1998-11-14  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL: Version 9.11 was released.

	* poem-ltn1.el (char-charset): Fix typo.

1998-11-13  Tanaka Akira  <akr@jaist.ac.jp>

	* broken.el: require 'poe.

1998-11-13  Tanaka Akira  <akr@jaist.ac.jp>

	* pccl.el: Enclose mule depended process by `unless-broken'.

1998-11-13  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poe.el (defun-maybe-cond): fixed problem in Emacs 18.

	* poe.el (defsubst): Moved from poe-18.el.

	* poe-18.el: Move macro `defsubst' to poe.el.


1998-11-13  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL: Version 9.10 was released.

1998-11-13  Tanaka Akira  <akr@jaist.ac.jp>

	* pccl.el (define-ccl-program): Adviced.

1998-11-12  Tanaka Akira  <akr@jaist.ac.jp>

	* pccl-om.el (ccl-cascading-read): New facility.

1998-11-10  Tanaka Akira  <akr@jaist.ac.jp>

	* EMU-ELS (emu-modules): Always install 'pccl.
